# PIM

./: .ycm_extra_conf.py  CMakeLists.txt  README.md  TODO.md  param.json  todo.md  update-gcc.sh
doc/: developing_notes.txt  error_types.txt
doc/errors_in_build/: CMakeLists.txt.linking_error_bk
include/: command_queue.h  cuda_support-inl.h  cuda_support.cuh  cuda_support.h  demand_distribution.h  device_parameters.h  frame.h  host_parameters.h  model_support-inl.cuh  model_support-inl.h  model_support.cuh  model_support.h  models.h  parameters.h  parametrs_def.h  process_record.h  support-inl.h  support.h  system_info.h
src/: CMakeLists.txt  command_queue.cc  command_queue.cu  cuda_support.cu  device_paramaters.cu  frame.cc  host_parameters.cc  host_parameters.cu  main.cc  model_dp.cu  model_fluid.cu  model_news.cu  model_support.cu  support.cc  system_info.cc  system_info.cu
